<resources>
    <string name="app_name" translatable="false">pillreminder</string>

    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>

    <string name="account_registration">Account Registration</string>
    <string name="register_with_e_mail">Register with E-mail</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_using_email">Register using Email</string>
    <string name="register">Register</string>

    <string name="account_login">Account Login</string>
    <string name="login_with_e_mail">Login with E-mail</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>

    <string name="send_reset_password_request">Send Reset Password Request</string>
    <string name="reset_pass_token">Reset Password Token</string>
    <string name="token">Token</string>
    <string name="validate_reset_pass_token">Validate Reset Password Token</string>
    <string name="set_new_pass">Set New Password</string>

    <string name="logout">Logout</string>

    <string name="my_doctor_contact_list">My Doctor Contact List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="treatments">Treatments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="my_timeline">My Timeline</string>
    <string name="my_appointment">My Appointment</string>
    <string name="search_doctor_contact">Search doctor contact</string>
    <string name="search_for_doctor_contact">Search for doctor contact</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="add_doctor_contact">Add Doctor Contact</string>
    <string name="update_doctor_contact">Update Doctor Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="activities">Activities</string>
    <string name="the_quick_brown_fox_jumps_over_the_lazy_dog_the_quick_brown_fox_jumps_over_the_lazy_dog">The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.</string>
    <string name="chat_person">Chat Person</string>
    <string name="message">Message</string>
    <string name="search_recent_messages">Search recent messages</string>
    <string name="search_for_message">Search for Message</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>

    <string name="email_empty">E-mail should not be empty</string>
    <string name="email_invalid">E-mail format is invalid</string>
    <string name="pass_empty">Password should not be empty</string>
    <string name="pass_invalid">Password should be at least 6 characters</string>
    <string name="conf_empty">Confirmed password should not be empty</string>
    <string name="conf_nomatch">Password and confirmed password should match</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="name_empty">Name should not be empty</string>
    <string name="phone_empty">Phone should not be empty</string>
    <string name="role_empty">Role should be chosen</string>
    <string name="register_success">You are now registered</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_existed">User already existed</string>
    <string name="doc_have_acc">Add contact success. Your doctor has an account in pillreminder.</string>
    <string name="doc_no_acc">Add contact success. Your doctor have no account in pillreminder.</string>
    <string name="del_con_success">Delete contact success</string>
    <string name="update_con_success">Update contact success</string>
    <string name="user_not_existed">User not existed</string>
    <string name="reset_success">Reset password request sent</string>
    <string name="reset_failed">Reset password request send failed</string>
    <string name="appointments">Appointments</string>
    <string name="add_new_appointment">Add new appointment</string>
    <string name="choose_doctor_contact">Choose Doctor Contact</string>
    <string name="note">Note</string>
    <string name="place">Place</string>
    <string name="date_and_time">Date and Time</string>
    <string name="address">Address</string>
    <string name="note_empty">Note should not be empty</string>
    <string name="place_empty">Place should not be empty</string>
    <string name="address_empty">Address should not be empty</string>
    <string name="date_time_empty">Date and time should not be empty</string>
    <string name="insert_app_success">Add new appointment success</string>
    <string name="update_app_success">Update appointment success</string>
    <string name="delete_app_success">Delete appointment success</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="update_appointment">Update Appointment</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="insert_trt_success">Add new treatment success</string>
    <string name="update_trt_success">Update treatment success</string>
    <string name="delete_trt_success">Delete treatment success</string>
    <string name="treatment_details">Treatment Details</string>
    <string name="update_treatment">Update Treatment</string>
    <string name="delete_treatment">Delete Treatment</string>
    <string name="add_new_treatment">Add new treatment</string>
    <string name="title">Title</string>
    <string name="dose">Dose</string>
    <string name="unit">Unit</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="time">Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="title_empty">Title should not be empty</string>
    <string name="dose_empty">Dose should not be empty</string>
    <string name="unit_empty">Unit should not be empty</string>
    <string name="start_date_empty">Start date should not be empty</string>
    <string name="end_date_empty">End date should not be empty</string>
    <string name="time_empty">Time should not be empty</string>
    <string name="Next">Next</string>
    <string name="From">From</string>
    <string name="to">to</string>
    <string name="upcoming_activities">Upcoming Activities</string>
    <string name="register_as_doctor">Register as Doctor</string>
    <string name="register_as_patient">Register as Patient</string>
    <string name="time_for_treatment">Time for your treatment</string>
    <string name="time_for_appointment">Time for your appointment</string>
</resources>