<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.appointment.AppointmentsUpdate">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/titleAppUpdate"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:backgroundTint="?android:statusBarColor"
            android:orientation="vertical">
            <LinearLayout
                android:paddingStart="20dp"
                android:paddingEnd="30dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:paddingHorizontal="10dp"
                    app:tint="?attr/colorPrimaryVariant"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_semibold"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/update_appointment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

     <LinearLayout
        android:layout_below="@id/titleAppUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/updateAppNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/note" />

            <EditText
                android:id="@+id/updateAppPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/place" />

            <EditText
                android:id="@+id/updateAppAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/updateAppDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:editable="false"
                android:hint="@string/date_and_time"/>

            <Button
                android:id="@+id/goUpdateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/update_appointment"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>