<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.auth.ResetPasswordToken">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

             <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_marginTop="100dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restokTitle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/reset_pass_token"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/restokTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">


            <EditText
                android:id="@+id/restokToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/token" />


            <Button
                android:id="@+id/toResetValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/validate_reset_pass_token"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
</RelativeLayout>