<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    tools:context=".controller.main.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/upcoming_activities"
            android:textColor="?attr/colorPrimaryVariant"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTLHome"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="170dp"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/toTimeline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:cardBackgroundColor="?attr/colorPrimary"
            android:clickable="true"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:src="@drawable/ic_baseline_view_timeline_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/my_timeline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?attr/colorOnPrimary"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/toDoctorContactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:cardBackgroundColor="?attr/colorPrimary"
            android:clickable="true"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:src="@drawable/ic_baseline_contacts_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/my_doctor_contact_list"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?attr/colorOnPrimary"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/toLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:cardBackgroundColor="?attr/colorPrimary"
            android:clickable="true"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:src="@drawable/ic_baseline_exit_to_app_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/sign_out"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?attr/colorOnPrimary"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>